--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 
                 localStorage.setItem("isLoggedIn", "true");
                 setTimeout(() => {
-            window.location.href = "main.html"; // Replace with your home page path
+            window.location.href = "type.html"; // Replace with your home page path
         }, 100);
             } else {
                 messageBox.textContent = "Wrong username or password!";
